--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pip-tools==4.5.1
 pydot==1.3.0
 pydot-ng==2.0.0
 pydotplus==2.0.2
-pygame==1.9.6
+pygame
 pyglet==1.5.0
 Pygments==2.7.4
 regex==2019.12.20
